fix empty state breaking layout on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -390,6 +390,7 @@ button:focus-visible {
   .main {
     flex-direction: row;
     min-width: 340px;
+    min-height: calc(100vh - var(--footer-height) - var(--header-height));
     height: 100%;
   }
 
